force-app/main/default/objects/LLC_BI__Risk_Grade_Factor_Value__c/fields/LLC_BI__Risk_Grade_Factor__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Risk_Grade_Factor__c</fullName>
    <description>This field is required. It is only populated automatically when the user selects or enters a value for the risk grade factor in a risk grade worksheet..  This field specifies the risk grade factor associated with the risk grade factor value.</description>
    <label>Risk Grade Factor</label>
    <referenceTo>LLC_BI__Risk_Grade_Factor__c</referenceTo>
    <relationshipLabel>Risk Grade Factor Values</relationshipLabel>
    <relationshipName>Risk_Grade_Factor_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>