force-app/main/default/objects/LLC_BI__Risk_Grade_Factor_Value__c/fields/LLC_BI__Risk_Grade_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Risk_Grade_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is currently not being used</description>
    <label>Risk Grade Template</label>
    <referenceTo>LLC_BI__Risk_Grade_Template__c</referenceTo>
    <relationshipLabel>Risk Grade Factor Values</relationshipLabel>
    <relationshipName>Risk_Grade_Factor_Values</relationshipName>
    <type>Lookup</type>
</CustomField>